# chronomemory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LEDGER.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.specsmith/: agents.md.m005.bak  governance-mode  ledger-chain.txt  migration-state.json  requirements.json  testcases.json  trace.jsonl
crates/chronomemory/: Cargo.toml
crates/chronomemory-py/: Cargo.toml
crates/chronomemory-py/src/: lib.rs
crates/chronomemory/examples/: write_wal.rs
crates/chronomemory/src/: context_pack.rs  dependency.rs  lib.rs  projection.rs  query.rs  replay.rs  types.rs  wal.rs
crates/chronomemory/tests/: cross_compat_py_to_rust.rs  esdb_tests.rs
docs/: ARCHITECTURE.md  COMPLIANCE.md  REQUIREMENTS.md  SPECSMITH.yml  TESTS.md
docs/architecture/: ARCHITECTURE.md
docs/governance/: CONTEXT-BUDGET.md  DRIFT-METRICS.md  LIFECYCLE.md  ROLES.md  RULES.md  SESSION-PROTOCOL.md  VERIFICATION.md
docs/requirements/: chronomemory.yml
docs/site/: changelog.md  index.md  installation.md  migration.md  quickstart.md  rust-core.md
docs/site/api/: bridge.md  record.md  store.md
docs/site/concepts/: oea.md  wal.md
docs/site/integration/: chronoagent.md  ctt-neural.md  specsmith.md
docs/tests/: chronomemory.yml
src/chronomemory/: __init__.py  bridge.py  context_pack.py  deps.py  metrics.py  query.py  rollback.py  store.py
tests/: test_bridge.py  test_context_pack.py  test_cross_compat.py  test_deps.py  test_metrics.py  test_oea.py  test_query.py  test_query_ext.py  test_robustness.py  test_rollback.py  test_store.py  test_wal_chain.py
