[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Phase 2: switch to maturin when PyO3 bindings land.
# build-system = { requires = ["maturin>=1.4"], build-backend = "maturin" }

[project]
name = "chronomemory"
version = "0.1.0"
description = "Epistemic State Database — tamper-evident WAL-based persistence for agentic AI workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Layer1Labs Silicon, Inc." },
    { name = "BitConcepts, LLC." },
]
keywords = [
    "esdb", "epistemic-ai", "agent-memory", "wal", "cpsc",
    "constraint-topology", "agentic-ai", "chronomemory",
    "anti-hallucination", "oea", "epistemic-state-database",
    "layer1labs",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Zero runtime dependencies — only stdlib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage    = "https://github.com/layer1labs/chronomemory"
Repository  = "https://github.com/layer1labs/chronomemory"
Issues      = "https://github.com/layer1labs/chronomemory/issues"
Changelog   = "https://github.com/layer1labs/chronomemory/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chronomemory = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "PTH"]
ignore = ["E501"]  # line length enforced by formatter, not linter

[tool.ruff.lint.per-file-ignores]
# pytest fixtures use Path and pytest at runtime; TCH would break them
"tests/**" = ["TCH", "TC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["chronomemory"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 85
